// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditModal Component snapshots gradeOverrideHistoryError is and empty and open is true modal open and StatusAlert showing 1`] = `
<ModalDialog
  hasCloseButton={true}
  isFullscreenOnMobile={true}
  isOpen={true}
  onClose={[MockFunction this.closeAssignmentModal]}
  size="xl"
  title="Edit Grades"
>
  <ModalDialog.Body>
    <div>
      <ModalHeaders />
      <Alert
        dismissible={false}
        show={true}
        variant="danger"
      >
        Weve been trying to contact you regarding...
      </Alert>
      <OverrideTable />
      <div>
        <FormattedMessage
          defaultMessage="Showing most recent actions (max 5). To see more, please contact support"
          description="Edit Modal visibility hint message"
          id="gradebook.GradesView.EditModal.contactSupport"
        />
      </div>
      <div>
        <FormattedMessage
          defaultMessage="Note: Once you save, your changes will be visible to students."
          description="Edit Modal saved changes effect hint"
          id="gradebook.GradesView.EditModal.saveVisibility"
        />
      </div>
    </div>
  </ModalDialog.Body>
  <ModalDialog.Footer>
    <ActionRow>
      <ModalDialog.CloseButton
        variant="tertiary"
      >
        <FormattedMessage
          defaultMessage="Cancel"
          description="Edit Modal close button text"
          id="gradebook.GradesView.EditModal.closeText"
        />
      </ModalDialog.CloseButton>
      <Button
        onClick={[MockFunction this.handleAdjustedGradeClick]}
        variant="primary"
      >
        <FormattedMessage
          defaultMessage="Save Grades"
          description="Edit Modal Save button label"
          id="gradebook.GradesView.EditModal.saveGrade"
        />
      </Button>
    </ActionRow>
  </ModalDialog.Footer>
</ModalDialog>
`;

exports[`EditModal Component snapshots gradeOverrideHistoryError is empty and open is false modal closed and StatusAlert closed 1`] = `
<ModalDialog
  hasCloseButton={true}
  isFullscreenOnMobile={true}
  isOpen={false}
  onClose={[MockFunction this.closeAssignmentModal]}
  size="xl"
  title="Edit Grades"
>
  <ModalDialog.Body>
    <div>
      <ModalHeaders />
      <Alert
        dismissible={false}
        show={false}
        variant="danger"
      >
        
      </Alert>
      <OverrideTable />
      <div>
        <FormattedMessage
          defaultMessage="Showing most recent actions (max 5). To see more, please contact support"
          description="Edit Modal visibility hint message"
          id="gradebook.GradesView.EditModal.contactSupport"
        />
      </div>
      <div>
        <FormattedMessage
          defaultMessage="Note: Once you save, your changes will be visible to students."
          description="Edit Modal saved changes effect hint"
          id="gradebook.GradesView.EditModal.saveVisibility"
        />
      </div>
    </div>
  </ModalDialog.Body>
  <ModalDialog.Footer>
    <ActionRow>
      <ModalDialog.CloseButton
        variant="tertiary"
      >
        <FormattedMessage
          defaultMessage="Cancel"
          description="Edit Modal close button text"
          id="gradebook.GradesView.EditModal.closeText"
        />
      </ModalDialog.CloseButton>
      <Button
        onClick={[MockFunction this.handleAdjustedGradeClick]}
        variant="primary"
      >
        <FormattedMessage
          defaultMessage="Save Grades"
          description="Edit Modal Save button label"
          id="gradebook.GradesView.EditModal.saveGrade"
        />
      </Button>
    </ActionRow>
  </ModalDialog.Footer>
</ModalDialog>
`;
